Init resume prep

--- a/resume.tex
+++ b/resume.tex
@@ -75,9 +75,9 @@
 
 %----------HEADING-----------------
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-  \textbf{{\Large Satish Kumar Sarraf}} & Email : \href{mailto:satishsarraf1@gmail.com}{mail@website.com}\\
+  \textbf{{\Large Satish Kumar Sarraf}} & Email : \href{mailto:satishsarraf1@gmail.com}{satishsarraf1@gmail.com}\\
 %   \href{http://sourabhbajaj.com/}{http://www.sourabhbajaj.com} 
-  & Mobile : +1-778-636-3003\\
+  Vancouver, BC & Mobile : +1-778-636-3003\\
 \end{tabular*}
 
 
@@ -94,25 +94,34 @@
 
 
 %-----------EXPERIENCE-----------------
-\section{Experience}
+\section{Work Experience}
   \resumeSubHeadingListStart
 
     \resumeSubheading
       {Samsung R\&D Institute}{Bangalore, India}
         % {Google}{Mountain View, CA}
-      {Lead Software Engineer}{June 2013 - Dec. 2017}
+      {Lead Software Engineer}{June 2017 - Dec. 2017}
       \resumeItemListStart
         \resumeItem{KNOX Security}
-          {TensorFlow is an open source software library for numerical computation using data flow graphs; primarily used for training deep learning models.}
+          {It is a security feature to strengthen the security of android devices. Contributed to the development of backend system for this service}
       \resumeItemListEnd
 
     \resumeSubheading
-      {Coursera}{Mountain View, CA}
-      {Senior Software Engineer}{Jan 2014 - Oct 2016}
+      {Samsung R\&D Institute}{Bangalore, India}
+      {Senior Software Engineer}{June 2015 - June 2017}
       \resumeItemListStart
-        \resumeItem{Notifications}
-          {Service for sending email, push and in-app notifications. Involved in features such as delivery time optimization, tracking, queuing and A/B testing. Built an internal app to run batch campaigns for marketing etc.}
-        \resumeItem{Nostos}
+        \resumeItem{Push Notifications}
+          {Service to push the notification to Android and Apple devices. Involved in features such as design and development, testing, performance optimization}
+        \resumeItemListEnd
+          
+     \resumeSubheading
+      {Samsung R\&D Institute}{Bangalore, India}
+      {Software Engineer}{June 2013 - June 2015}
+      \resumeItemListStart
+        \resumeItem{Analytics of data usage of the KNOX licenses }
+          {Service to analyse the usage data of KNOX licences on Samsung devices. Involved in features such as design and development, testing, performance, its integration with backend of KNOX system.}
+        % \resumeItemListEnd
+        % \resumeItem{Nostos}
         %   {Bulk data processing and injection service from Hadoop to Cassandra and provides a thin REST layer on top for serving offline computed data online.}
         % \resumeItem{Workflows}
         %   {Dataduct an open source workflow framework to create and manage data pipelines leveraging reusables patterns to expedite developer productivity.}
@@ -137,12 +146,14 @@
 %-----------PROJECTS-----------------
 \section{Projects}
   \resumeSubHeadingListStart
-    \resumeSubItem{QuantSoftware Toolkit}
-      {Open source python library for financial data analysis and machine learning for finance.}
-    \resumeSubItem{Github Visualization}
-      {Data Visualization of Git Log data using D3 to analyze project trends over time.}
-    \resumeSubItem{Recommendation System}
-      {Music and Movie recommender systems using collaborative filtering on public datasets.}
+    \resumeSubItem{\href{https://arxiv.org/abs/2003.09761}{ Smarter Parking: Using AI to Identify Parking Inefficiencies in Vancouver}}
+      {We, group of seven graduate students developed a deep-learning model of block-by-block parking availability based on data from parking meters and audits and (2) a computational simulation of drivers searching for an on-street spot. For off-street parking, we developed a computational simulation of the time it would take drivers drive from their original destination to the nearest city-owned off-street lot and then to queue for a spot based on traffic and lot occupancy data. }
+       
+       \resumeSubItem{ Regression test selection for micorservices-based applications }
+      {Reduces the regression testing time of microservices by selecting only the tests that are impacted by code changes.}
+      
+    \resumeSubItem{EnergyMAC: Energy Based Access Control for Android}
+      {We, a group of two grad students developed a energy centric management for Android device i.e, it allows one to budget energy of their mobile device for mobile applications based on their preferences.}
 %     \resumeSubItem{Mac Setup}
 %       {Book that gives step by step instructions on setting up developer environment on Mac OS.}
   \resumeSubHeadingListEnd
@@ -152,7 +163,7 @@
 \section{Programming Skills}
  \resumeSubHeadingListStart
    \item{
-     \textbf{Languages}{: Java, Python, SQL, C }
+     \textbf{Languages}{: Java, Python, C, SQL }
      \hfill
      \textbf{Technologies}{: AWS, Spring, Hibernate}
    }
